@@ -24,10 +24,9 @@ import org.openrewrite.test.RewriteTest;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.List;
 import java.util.Objects;
 
-import static java.util.Collections.singletonList;
 import static org.openrewrite.java.Assertions.java;
 
 class InternalBindPackagesTest implements RewriteTest {
@@ -35,14 +34,14 @@ class InternalBindPackagesTest implements RewriteTest {
     public void defaults(RecipeSpec spec) {
         spec
           .parser(JavaParser.fromJavaVersion()
-            .classpath(singletonList(resourceJar("sun.internal.newClass.jar"))))
+            .classpath(List.of(resourceJar("sun.internal.newClass.jar"))))
           .recipeFromResources("org.openrewrite.java.migrate.InternalBindPackages");
     }
 
     private static Path resourceJar(String name) {
         URL url = InternalBindPackagesTest.class.getClassLoader().getResource("META-INF/rewrite/classpath/" + name);
         try {
-            return Paths.get(Objects.requireNonNull(url, "Resource not found: " + name).toURI());
+            return Path.of(Objects.requireNonNull(url, "Resource not found: " + name).toURI());
         } catch (URISyntaxException e) {
             throw new IllegalStateException(e);
         }
